@@ -13,6 +13,12 @@
      [sshconnect.c]
      don't mention key type in key-changed-warning, since we also print
      this warning if a new key type appears. ok djm@
+   - djm@cvs.openbsd.org 2010/12/15 00:49:27
+     [readpass.c]
+     fix ControlMaster=ask regression
+     reset SIGCHLD handler before fork (and restore it after) so we don't miss
+     the the askpass child's exit status. Correct test for exit status/signal to
+     account for waitpid() failure; with claudio@ ok claudio@ markus@
 
 20110104
  - (djm) [configure.ac Makefile.in] Use mandoc as preferred manpage
